force-app/main/default/objects/Competitor__c/fields/Competitor_Bid__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Bid__c</fullName>
    <description>The dollar amount that the competitor bid for the work</description>
    <inlineHelpText>The dollar amount that the competitor bid for the work</inlineHelpText>
    <label>Competitor Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>