force-app/main/default/objects/Competitor__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Open text box for miscellaneous notes on the competitor</description>
    <inlineHelpText>Open text box for miscellaneous notes on the competitor</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>